# ingest

./: .gitignore  Cargo.toml  README.md
benches/: large_area.rs
src/: bin.rs  denorm.rs  denormalize.rs  divide.rs  encoder.rs  error.rs  lib.rs  main.rs  pack.rs  par_scan.rs  progress.rs  reader.rs  record.rs  store.rs  tags.rs  value.rs  writer.rs
src/new-with-leveldb/: encoder.rs  lib.rs
src/old/: lib.rs
tests/: encode.rs  ingest.rs
tests/data/: Makefile  changeset.o5c  changeset.xml  changeset1.o5c  changeset3.o5c  changeset3.xml  ingest.pbf  ingest.xml  node.pbf  relation.pbf  relation.xml  way.pbf  way.xml
tests/data/0/: Makefile  changeset1.xml  changeset2.o5c  changeset2.xml  changeset3.o5c  node.xml
