[package]
name = "peermaps-ingest"
description = "Convert OSM data into the peermaps on-disk format"
version = "1.0.0"
authors = ["okdistribute <633012+okdistribute@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/peermaps/ingest"
documentation = "https://docs.rs/ingest"
license = "MIT OR Apache-2.0"

[[bin]]
name = "peermaps-ingest"
path = "src/bin/ingest.rs"

[dependencies]
eyros = "4.1.0"
georender-pack = { path = "../georender-pack.rs" }
desert = "2.0.0"
osmpbf = "0.2.4"
async-trait = "0.1.48"
async-std = "1.9.0"
leveldb = "0.8.6"
db-key = "0.0.5"
leveldb-sys = "2.0.8"
osm-is-area = "1.0.0"
random-access-disk = "2.0.0"
o5m-stream = "1.1.4"
lru = "0.6.5"
interleaved-ordered = "0.1.1"
async-recursion = "0.3.2"
argmap = "1.1.0"
indoc = "1.0.3"

[[bench]]
name = "large_area"
harness = false

[dev-dependencies]
earcutr = "0.1.1"
pretty_assertions = "0.7.1"
tempfile = "3.2.0"
