[package]
name = "peermaps-ingest"
description = "Convert OSM data into the peermaps on-disk format"
version = "1.0.2"
authors = ["okdistribute <633012+okdistribute@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/peermaps/ingest"
documentation = "https://docs.rs/ingest"
license = "MIT OR Apache-2.0"

[[bin]]
name = "peermaps-ingest"
path = "src/bin.rs"

[dependencies]
eyros = "4.2.2"
georender-pack = "2.1.1"
desert = "2.0.0"
async-trait = "0.1.48"
async-std = "1.9.0"
osm-is-area = "1.0.0"
random-access-disk = "2.0.0"
o5m-stream = "2.0.0"
lru = "0.6.5"
interleaved-ordered = "0.1.1"
async-recursion = "0.3.2"
argmap = "1.1.0"
indoc = "1.0.3"
futures = "0.3.13"
osmpbf-parser = "1.3.1"
jemallocator = "0.3.2"
hashbrown = "0.9.1"

[[bench]]
name = "large_area"
harness = false

[dev-dependencies]
earcutr = "0.1.1"
pretty_assertions = "0.7.1"
tempfile = "3.2.0"
